# catasto-cdc

./: .env  .gitignore  Dockerfile  README.md  cli.py  index.html  pyproject.toml
.github/workflows/: deploy_docs.yml  test.yml
app/: cdc.py  models.py
app/config/: app.py
catasto-cdc/: application.py
js/: app.js
scripts/: build_docker.sh  consumer.py  fs_producer.py  lint.sh  producer.py  services.yml  start_nats_broker_locally.sh  static-analysis.sh  stop_nats_broker_locally.sh  subscribe_to_nats_broker_locally.sh
tests/: test_app.py  test_application.py
